# causeway

./: .gitignore  LICENSE  README.md  brain_mcp.py  causeway  causeway_cli.py  db.py  history_logger.py  install.sh  learning_agent.py  pyproject.toml  repro_issue.py  rule_agent.py  server.py  setup.py
.github/workflows/: build-e2e-image.yml  e2e-tests.yml  release.yml
causeway/: cli.py  db.py  mcp.py  rule_agent.py  rulesets.py  server.py  setup.py  version.py
causeway/hooks/: check_rules.py  init_db.py  ping.sh  version.sh
devcontainer/: Dockerfile  devcontainer.json  run.sh
docs/: DEVCONTAINER.md
scripts/: check_rules.py
test/: .mcp.json  server.py  world-map.html
test/.claude/: settings.json
tests/: README.md  conftest.py  minimal_verify.py  test_check_rules.py  test_cli.py  test_learning_agent.py  test_mcp.py  test_rule_agent.py  test_semantic_rules.py  test_server.py  verify_fix.py
tests/e2e/: Dockerfile  cleanup_state.sh  run_e2e_tests.sh  run_local.sh  run_scenario.py  verify_db.py
tests/e2e/scenarios/: 01_block_rm_rf.yml  02_block_git_force_main.yml  03_block_git_force_production.yml  04_warn_pip_usage.yml  05_allow_safe_operations.yml  06_learn_from_corrections.yml
tests/integration/: __init__.py  test_embeddings.py  test_mcp_tools.py  test_rule_checking.py  test_sqlite_vec.py
