[project]
name = "causeway"
version = "0.1.0"
description = "Rule enforcement and learning for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "sqlite-vec",
    "numpy",
    "mcp",
    "pydantic-ai",
    "sentence-transformers",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "openai",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
causeway = "causeway.cli:main"
causeway-mcp = "causeway.mcp:run"
causeway-check = "causeway.hooks.check_rules:main"
causeway-learn = "causeway.learning_agent:main"
causeway-init = "causeway.hooks.init_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["causeway"]

[tool.pytest.ini_options]
pythonpath = ["."]
