[project]
name = "causeway"
dynamic = ["version"]
description = "Rule enforcement and learning for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "sqlite-vec",
    "numpy",
    "mcp",
    "pydantic-ai",
    "sentence-transformers",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "openai",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
causeway = "causeway.cli:main"
causeway-mcp = "causeway.mcp:run"
causeway-check = "causeway.hooks.check_rules:main"
causeway-learn = "causeway.learning_agent:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["causeway"]

[tool.pytest.ini_options]
pythonpath = ["."]
